fixed scrollbars in previews

--- a/pimcore/static6/css/admin.css
+++ b/pimcore/static6/css/admin.css
@@ -253,6 +253,9 @@
     overflow: auto;
 }
 
+.pimcore_preview_body {
+    overflow: hidden !important;
+}
 
 .pimcore_iframe_mask {
     position: absolute;
